# StudentCareSystem_Sp25

./: .gitattributes  .gitignore  README.md  Script.sql  ai-database.md  app.script  docker-compose-server.yml  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: compnent-test.yml  develop.yml  feature.yml  integration-test.yml  master.yml  release.yml  static-test-both.yml  units-test.yml
Backend/: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md
Backend/StudentCareSystem.API/: Program.cs  StudentCareSystem.API.csproj  StudentCareSystem.API.http  appsettings.json
EmailProxyMock/: dockerfile  package-lock.json  package.json
Frontend/: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  ecosystem.config.cjs  nodemon.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ai_service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai_service/app/: README.md  main.py
ai_service/app/core/: async_session_manager.py  database.py  db_engine.py
ai_service/app/core/controllers/: exception_handler.py  mcp_server.py  model_controller.py  progress_criterion_type_controller.py  student_analysis_controller.py
ai_service/app/core/dtos/: ApiRequest.py  ApiResponse.py  ProgressCriterionTypeDto.py  StudentAnalysisFilter.py  StudentAttendanceDto.py  StudentDto.py  StudentPointDto.py  TrainModelRequest.py
ai_service/app/core/services/: model_manager.py  model_trainer_service.py  preprocessing_service.py  progress_criterion_type_service.py  prompt_management_service.py  semester_service.py  settings_service.py  student_analysis_service.py  student_attendance_service.py  student_points_service.py  student_ranking_service.py  student_service.py  subject_service.py  tenant_data_importer_service.py  tenant_service.py
ai_service/app/models/: kmeans_model.pkl  scaler.pkl
ai_service/app/utils/: audit.py  config.py  httpclient.py
ai_service/notebooks/: SCS_kmeans_model_training.ipynb
ai_service/tests/: test_model_compability.py
ai_service_agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai_service_agent/app/: chatbot.py  client.py  main.py
ai_service_agent/app/core/: async_session_manager.py  database.py  session_manager.py
ai_service_agent/app/core/controllers/: chat_controller.py  llm_controller.py  prompt_controller.py  settings_controller.py  student_analysis_controller.py
ai_service_agent/app/core/dtos/: ChatDto.py  GetLLMResponseRequest.py  Pagination.py  PaginationFilterBase.py  PromptDto.py  SettingsDto.py  StudentAnalysisFilter.py  StudentPointDto.py
ai_service_agent/app/core/prompts/: intent_prompt.py  student_analysis_prompt.py
ai_service_agent/app/core/services/: prompt_management_service.py  student_analysis_service.py
ai_service_agent/app/utils/: config.py  json_service.py
k8s/: .gitignore
(+1133 files in other folders)
